# samp-qr

./: Cargo.toml  README.md  pawn.json  qr.inc  test.pwn
src/: lib.rs  plugin.rs
test/: samp.json
