[package]
name = "samp-qr"
authors = ["Southclaws <hello@southcla.ws>"]
version = "0.9.0"
edition = "2018"

[lib]
name = "samp_qr"
crate-type = ["dylib"]

[dependencies]
samp = {git="https://github.com/ZOTTCE/samp-rs/",branch="async-amx",features = ["async","encoding"]}
log = "0.4.6"
string-error = "0.1.0"
enum_primitive = "0.1.1"
fern = "0.5.7"
qrcode-generator = "1.0.6"
